==> ADiea/HA-8266/temp/si4432.cpp <==
#include "si4432.h"
#define MAX_TRANSMIT_TIMEOUT 200
#define BAUD_RATE_REGS 12

void Si4432::init() {

	if (_intPin != 0)
		pinMode(_intPin, INPUT);

	_spi->begin();
	_spi->setDelay(200);

#if DEBUG_SI4432
	debugf("SPI is initialized now.");
#endif

	hardReset();

}

bool Si4432::sendPacket(uint8_t length,
						const byte* data,
						bool waitResponse/* = false*/,
						uint32_t ackTimeout/* = 100*/,
						uint8_t *responseLength/* = 0*/,
						byte* responseBuffer/* = 0*/)
{
	clearTxFIFO();
	ChangeRegister(REG_PKG_LEN, length);

	BurstWrite(REG_FIFO, data, length);

	ChangeRegister(REG_INT_ENABLE1, 0x04); // set interrupts on for package sent
	ChangeRegister(REG_INT_ENABLE2, 0x00); // set interrupts off for anything else
	//read interrupt registers to clean them
	ReadRegister(REG_INT_STATUS1);
	ReadRegister(REG_INT_STATUS2);

	switchMode(TXMode | Ready);

	uint64_t enterMillis = millis();

	while (millis() - enterMillis < MAX_TRANSMIT_TIMEOUT) {

		if ((_intPin != 0) && (digitalRead(_intPin) != 0)) {
			continue;
		}

		byte intStatus = ReadRegister(REG_INT_STATUS1);
		ReadRegister(REG_INT_STATUS2);

		if (intStatus & 0x04) {
			switchMode(Ready | TuneMode);
#if DEBUG_SI4432
			debugf("Package sent! -- %x ", intStatus);
#endif
			// package sent. now, return true if not to wait ack, or wait ack (wait for packet only for 'remaining' amount of time)
			if (waitResponse) {
				if (waitForPacket(ackTimeout))
				{
					getPacketReceived(responseLength, responseBuffer);
					return true;
				} else {
					return false;
				}
			} else {
				return true;
			}
		}
	}

	//timeout occured.
	debugf("TX timeout");

	switchMode(Ready);

	if (ReadRegister(REG_DEV_STATUS) & 0x80) {
		clearFIFO();
	}

	return false;

}

void Si4432::switchMode(byte mode) {

	ChangeRegister(REG_STATE, mode); // receive mode
	//delay(20);
#if DEBUG_SI4432
	delay(1);
	byte val = ReadRegister(REG_DEV_STATUS);
	debugf("== DEV STATUS: %x ==", val);
#endif
}

void Si4432::BurstWrite(Registers startReg, const byte value[], uint8_t length) {

	byte regVal = (byte) startReg | 0x80; // set MSB

	_spi->enable();
	delayMicroseconds(1);
	_spi->send(&regVal, 1);

#if DEBUG_VERBOSE_SI4432
		debugf("Writing: %x | %x ... %x (%d bytes)", (regVal != 0xFF ? (regVal) & 0x7F : 0x7F),
				value[0], value[length-1], length);
#endif

	_spi->send(value, length);

	_spi->disable();
}

void Si4432::BurstRead(Registers startReg, byte value[], uint8_t length) {

	byte regVal = (byte) startReg & 0x7F; // set MSB

	_spi->enable();
	delayMicroseconds(1);
	_spi->send(&regVal, 1);

	_spi->setMOSI(HIGH); /* Send 0xFF */
	_spi->recv(value, length);

#if DEBUG_VERBOSE_SI4432
		debugf("Reading: %x  | %x..%x (%d bytes)", (regVal != 0x7F ? (regVal) & 0x7F : 0x7F),
				value[0], value[length-1], length);
#endif
	_spi->disable();
}

void Si4432::hardReset() {


	switchMode(0x80);//chip reset
	delay(1);

	byte reg = ReadRegister(REG_INT_STATUS2);
	uint8_t count = 25;
	while ((reg & 0x02) != 0x02 && reg != 0xFF && --count)
	{
#if DEBUG_SI4432
		debugf("POR: %x ", reg);
		delay(1);
		reg = ReadRegister(REG_INT_STATUS2);
#endif
	}

	boot();
}

bool Si4432::isPacketReceived() {

	if ((_intPin != 0) && (digitalRead(_intPin) != 0)) {
		return false; // if no interrupt occured, no packet received is assumed (since startListening will be called prior, this assumption is enough)
	}
	// check for package received status interrupt register
	byte intStat = ReadRegister(REG_INT_STATUS1);

#if DEBUG_SI4432
	byte intStat2 = ReadRegister(REG_INT_STATUS2);

	if (intStat2 & 0x40) { //interrupt occured, check it && read the Interrupt Status1 register for 'preamble '

		debugf("Valid Preamble detected -- %x", intStat2);

	}

	if (intStat2 & 0x80) { //interrupt occured, check it && read the Interrupt Status1 register for 'preamble '

		debugf("SYNC WORD detected -- %x", intStat2);

	}
#else
	ReadRegister(REG_INT_STATUS2);
#endif

	if (intStat & 0x02) { //interrupt occured, check it && read the Interrupt Status1 register for 'valid packet'
		switchMode(Ready | TuneMode); // if packet came, get out of Rx mode till the packet is read out. Keep PLL on for fast reaction
#if DEBUG_SI4432
				debugf("Packet detected -- %x", intStat);
#endif
		return true;
	} else if (intStat & 0x01) { // packet crc error
		switchMode(Ready); // get out of Rx mode till buffers are cleared
//#if DEBUG_SI4432
		debugf("CRC Error in Packet detected!-- %x ", intStat);
//#endif
		clearRxFIFO();
		switchMode(RXMode | Ready); // get back to work
		return false;
	}

	//no relevant interrupt? no packet!

	return false;
}
